# healthcare_forum

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/blog/workdir/: dna.yaml
dnas/forum/workdir/: dna.yaml
tests/src/blog/blog/: all-listings.test.ts  all-posts.test.ts  all-profiles.test.ts  common.ts  listing-format.test.ts  listing.test.ts  listings-by-creator.test.ts  my-profiles.test.ts  name.test.ts  profile.test.ts
tests/src/forum/forum/: all-h-blogs.test.ts  all-health-blogs.test.ts  all-health-forum.test.ts  all-people-profiles.test.ts  common.ts  h-blog.test.ts  health-blog.test.ts  health-forum.test.ts  my-h-blogs.test.ts  my-health-blogs.test.ts  my-profiles.test.ts  people-profile.test.ts
ui/src/: App.vue  App2.vue  AppBackUp.vue  App_blog1.vue  sample.vue
ui/src/blog/blog/: AllListings.vue  AllPosts.vue  AllProfiles.vue  CreateListing.vue  CreateListingFormat.vue  CreateName.vue  CreateProfile.vue  EditListing.vue  EditListingFormat.vue  EditName.vue  EditProfile.vue  ListingDetail.vue  ListingFormatDetail.vue  ListingFormatsForListing.vue  ListingsByCreator.vue  MyProfiles.vue  NameDetail.vue  ProfileDetail.vue  types.ts
ui/src/forum/forum/: AllHBlogs.vue  AllHealthBlogs.vue  AllHealthForum.vue  AllPeopleProfiles.vue  CreateHBlog.vue  CreateHealthBlog.vue  CreateHealthForum.vue  CreatePeopleProfile.vue  EditHBlog.vue  EditHealthBlog.vue  EditHealthForum.vue  EditPeopleProfile.vue  HBlogDetail.vue  HealthBlogDetail.vue  HealthBlogsForPeopleProfile.vue  HealthForumDetail.vue  MyHBlogs.vue  types.ts  (+4 more)
workdir/: happ.yaml  web-happ.yaml
(+36 files in other folders)
