[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.3-beta-rc.0"
hdk = "=0.1.3-beta-rc.1"
holochain_integrity_types = "=0.1.3-beta-rc.0"
serde = "1"

[workspace.dependencies.blog]
path = "dnas/blog/zomes/coordinator/blog"

[workspace.dependencies.blog_integrity]
path = "dnas/blog/zomes/integrity/blog"
