[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.2"
hdk = "=0.1.2"
holochain_integrity_types = "=0.1.2"
serde = "1"

[workspace.dependencies.blog]
path = "dnas/blog/zomes/coordinator/blog"

[workspace.dependencies.blog_integrity]
path = "dnas/blog/zomes/integrity/blog"

[workspace.dependencies.forum]
path = "dnas/forum/zomes/coordinator/forum"

[workspace.dependencies.forum_integrity]
path = "dnas/forum/zomes/integrity/forum"
